# nss-mdns-0.10

./: .gitattributes  .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  bootstrap.sh  config.h  config.h.in  configure  configure.ac  configure.scan  libtool
doc/: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.html.in
src/: .gitignore  Makefile  Makefile.am  Makefile.in  avahi-test.c  avahi.c  avahi.h  bsdnss.c  dns.c  dns.h  mdns-test.c  nss-test.c  nss.c  query.c  query.h  util.c  util.h
